--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -162,7 +162,7 @@
   <ion-row>
     <ion-col>
       <div class="flex-container">
-        <img style="position:absolute; top:-10%; width:100%" src="./assets/sunrise_shape.png" />
+        <img style="position:absolute; top:-40%; width:100%" src="./assets/sunrise_shape.png" />
       </div>
     </ion-col>
   </ion-row>
@@ -193,7 +193,7 @@
     </ion-col>
   </ion-row>
 
-  <ion-row style="position: relative; top: 5%; height: 600px; text-align: auto">
+  <ion-row style="position: relative; left: -5%; top: 5%; height: 600px; text-align: auto">
     <ion-slides [options]="{ slidesPerView: 2, zoom: true, grabCursor: true }" pager>
       <ion-slide style="border: 5px">
         <ion-col>
