--- a/src/app/request-aid/request-aid.page.html
+++ b/src/app/request-aid/request-aid.page.html
@@ -1,10 +1,41 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>requestAid</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content: style="overflow:hidden">
+  <ion-row>
+    <ion-text id="apply_text">
+      APPLY
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-text id="emergency_text">
+      Emergency <br> Financial Assistance
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-text id="description_text">
+      For any student in need of financial assistance for
+      amenities such as transportation fees, food, and 
+      emergency housing, we have an application  for 
+      financial assistance thanks to the generosity of our donors*
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-text id="terms_text">
+      *Terms and conditions apply
+    </ion-text>
+  </ion-row>
+  <ion-row>
+    <ion-button id="aid_button">
+      APPLY NOW
+    </ion-button>
+  </ion-row>
+  <ion-row>
+    <ion-button fill="clear" id="terms_button">
+      <ion-text>
+        TERMS AND CONDITIONS
+      </ion-text>
+    </ion-button>
+  </ion-row>
 
-<ion-content>
+  <!--
   <ion-card>
     <ion-card-title>
       APPLY
@@ -33,3 +64,5 @@
     </ion-button>
   </ion-row>
 </ion-content>
+
+-->
