--- a/src/app/schedule/schedule.page.html
+++ b/src/app/schedule/schedule.page.html
@@ -1,35 +1,31 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>schedule</ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content>
   <ion-row>
-    <ion-text>
+    <ion-text id="legal_text">
       Legal Services
     </ion-text>
   </ion-row>
   <ion-row>
-    <ion-button>
-      <ion-icon name="calendar-clear-outline"></ion-icon>
+    <ion-button id="appointment_button">
+      <ion-icon name="calendar-number-outline"></ion-icon>
       View Appointment
     </ion-button>
   </ion-row>
   <ion-row>
-    <ion-button>
-      <ion-icon name="calendar-clear-outline"></ion-icon>
-      Schedule with Attourneys
+    <ion-button id="schedule_button">
+      <ion-icon name="calendar-outline"></ion-icon>
+      Schedule with Attorneys
     </ion-button>
   </ion-row>
   <ion-row>
-    <ion-button>
+    <ion-button id="faq_button">
       <ion-icon name="help-circle-outline"></ion-icon>
       FAQ
     </ion-button>
   </ion-row>
   <ion-row>
-    <ion-button>
+    <ion-button id="resource_button">
       <ion-icon name="book-outline"></ion-icon>
       Resource Library
     </ion-button>
