--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,8 +3,8 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-background-color: #ffffff;
-  --ion-toolbar-background: #ffffff;
+  --ion-background-color: #EEEEEE;
+  --ion-toolbar-background: #EEEEEE;
   --ion-tab-bar-background: #ffffff;
   --ion-card-background: #ffffff;
   /** primary **/
