--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -268,6 +268,10 @@ ion-slides {
   font-size: 10px;
 }
 
+ion-content {
+  --ion-background-color: #FFFFFF;
+}
+
 ion-title {
   @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
   font-family: 'Oxygen', sans-serif;
