--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -9,7 +9,7 @@
         <ion-icon name="cog"></ion-icon>
       </ion-button>
     -->
-      <ion-button color="secondary">
+      <ion-button [routerLink]="['/login']" color="secondary">
         <ion-icon name="person"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -30,7 +30,7 @@
       <ion-label>Find Jobs</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="schedule">
+    <ion-tab-button tab="legal">
       <ion-icon name="briefcase-outline"></ion-icon>
       <ion-label>Legal</ion-label>
     </ion-tab-button>
