bug fixes and added pages

--- a/src/app/apply-aid/apply-aid.page.html
+++ b/src/app/apply-aid/apply-aid.page.html
@@ -15,7 +15,7 @@
             id="money_input"
             placeholder="0.00" 
             inputmode="decimal" 
-            [(ngModel)]="entry" 
+            [(ngModel)]="amounty" 
             name="amount"></ion-input>
   </ion-row>
 
@@ -28,7 +28,7 @@
     <ion-textarea
             id="justify_input"
             placeholder="My family does not have enough funds. And I cannot afford my tuition."
-            [(ngModel)]="entry" 
+            [(ngModel)]="justification" 
             name="reason"></ion-textarea>
   </ion-row>
 
