--- a/src/app/donate/donate.page.html
+++ b/src/app/donate/donate.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title></ion-title>
-  </ion-toolbar>
-</ion-header>
-
-
-<ion-content: style="overflow:hidden">
+<ion-content style="overflow:hidden">
   <ion-grid>
     <ion-row>
       <img src="./assets/arrow-left.png" id="left_arrows" />
