--- a/src/app/request-aid/request-aid.page.html
+++ b/src/app/request-aid/request-aid.page.html
@@ -1,4 +1,4 @@
-<ion-content: style="overflow:hidden">
+<ion-content style="overflow:hidden">
   <ion-row>
     <ion-text id="apply_text">
       APPLY
