--- a/src/app/schedule/schedule.page.html
+++ b/src/app/schedule/schedule.page.html
@@ -1,6 +1,22 @@
 <ion-content>
     <ion-row>
-      <ion-button fill=clear [routerLink]="['/tablinks/request-aid']" id="back_button">
+      <ion-button fill=clear [routerLink]="['/tablinks/legal']" id="back_button">
         <img src="./assets/back_button.png"/>
       </ion-button>
+    </ion-row>
+
+    <ion-row id="waves_img">
+      <img src="../assets/legalwave.png" />
+    </ion-row>
+
+    <ion-row id="legal_text">
+      <ion-text>
+        LEGAL
+      </ion-text>
+    </ion-row>
+
+    <ion-row id="find_text">
+      <ion-text>
+        Find a CFGI Attorney For a Consulation
+      </ion-text>
     </ion-row>
