Gabby test commit
changed "requested amount of aid" to just "requested amount"

--- a/src/app/apply-aid/apply-aid.page.html
+++ b/src/app/apply-aid/apply-aid.page.html
@@ -7,7 +7,7 @@
 
   <ion-row>
     <ion-text id="money_text">
-      Requested amount of aid:
+      Requested amount:
     </ion-text>
   </ion-row>
   <ion-row>
