--- a/src/app/forgot-password/forgot-password.page.scss
+++ b/src/app/forgot-password/forgot-password.page.scss
@@ -55,7 +55,8 @@
     height: 5%;
     left:15%;
     top:53%;
-
+    
+    background-color: #ffffff;
     border: 1px solid #DADADA;
     box-sizing: border-box;
     border-radius: 4px;
