--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -67,6 +67,7 @@
     left:25%;
     top:60%;
 
+    background-color: #ffffff;
     border: 1px solid #DADADA;
     box-sizing: border-box;
     border-radius: 4px;
@@ -80,6 +81,7 @@
     left:25%;
     top:68%;
 
+    background-color: #ffffff;
     border: 1px solid #DADADA;
     box-sizing: border-box;
     border-radius: 4px;
