--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -193,8 +193,8 @@
     </ion-col>
   </ion-row>
 
-  <ion-row style="position: relative; left: -5%; top: 5%; height: 600px; text-align: auto">
-    <ion-slides [options]="{ slidesPerView: 2, zoom: true, grabCursor: true }" pager>
+  <ion-row style="position: relative; top: 5%; height: 75%; text-align: auto">
+    <ion-slides style="height:90vh" [options]="{ slidesPerView: 1.5, zoom: true, grabCursor: true }" pager>
       <ion-slide style="border: 5px">
         <ion-col>
           <ion-card style="width: 100%">
