--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -9,7 +9,7 @@
         <ion-icon name="cog"></ion-icon>
       </ion-button>
     -->
-      <ion-button [routerLink]="['/login']" color="secondary">
+      <ion-button [routerLink]="['/settings']" color="secondary">
         <ion-icon name="person"></ion-icon>
       </ion-button>
     </ion-buttons>
