--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -194,7 +194,7 @@
   </ion-row>
 
   <ion-row style="position: relative; top: 5%; height: 75%; text-align: auto">
-    <ion-slides style="height:90vh" [options]="{ slidesPerView: 1.5, zoom: true, grabCursor: true }" pager>
+    <ion-slides style="height:90vh" [options]="{centeredSlides: true, slidesPerView: 1.5, zoom: true, grabCursor: true }" pager>
       <ion-slide style="border: 5px">
         <ion-col>
           <ion-card style="width: 100%">
@@ -214,7 +214,7 @@
       <ion-slide style="border: 5px">
         <ion-col>
           <ion-card style="width: 100%">
-            <img src="./assets/chien-shiungWu.png" />
+            <img src="./assets/chien-shiungWu.png"/>
             <ion-card-header>
               <ion-card-title id = "immigrant_title">CHIEN-SHIUNG WU</ion-card-title>
               <ion-card-subtitle id = "immigrant_subtitle">CHINA</ion-card-subtitle>
