--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -268,6 +268,74 @@ ion-slides {
   font-size: 3vmin;
 }
 
+#row1{
+  height: 50px;
+}
+
+#squareSlides {
+  left: -5%; 
+  width:110%;
+}
+
+#alignCenter{
+  text-align: center;
+}
+
+#meetRow{
+  padding: 5px; 
+  height: 5px; 
+  width: 100%; 
+  text-align: right;
+}
+
+#foundersRow{
+  padding: 20px; 
+  width: 100%; 
+  text-align: right;
+}
+
+#height350{
+  height: 350px;
+}
+
+#border5{
+  border: 5px;
+}
+
+#width100{
+  width: 100%;
+  height: 550px;
+}
+
+#immagrantSlideDeck{
+  position: relative; 
+  top: 5%; 
+  height: 75%; 
+  text-align: auto;
+}
+
+#height90vh{
+  height:90vh;
+}
+
+#height75{
+  height: 75px;
+}
+
+#height20{
+  height: 20px;
+}
+
+#height50{
+  height: 50px;
+}
+
+#famousImmigrantPicture{
+  position:absolute; 
+  top:-40%; 
+  width:100%;
+}
+
 ion-content {
   --ion-background-color: #FFFFFF;
 }
@@ -304,4 +372,3 @@ ion-row {
 ion-card {
   box-shadow: none !important;
 }
-
