--- a/src/app/apply-aid/apply-aid.page.scss
+++ b/src/app/apply-aid/apply-aid.page.scss
@@ -1,7 +1,4 @@
-
-
 #back_button {
-    position: absolute;
     top:2%;
     color: black;
 }
@@ -19,7 +16,6 @@
     line-height: 16px;
     /* identical to box height, or 80% */
     text-align: left;
-
     color: #3F3356;
 }
 
@@ -58,7 +54,6 @@
     line-height: 6vmin;
     /* identical to box height, or 80% */
     text-align: left;
-
     color: #3F3356;
 }
 
@@ -77,13 +72,11 @@
     --icon-color :#FFFFFF;
     --placeholder-opacity:50%;
     --ion-icon: #000000;
-
     border: 1px solid #DADADA;
     box-sizing: border-box;
     border-radius: 4px;
     font-size: 3.5vmin;
     --padding-start: 5%;
-
 }
 
 #doc_text {
@@ -99,7 +92,6 @@
     line-height: 16px;
     /* identical to box height, or 80% */
     text-align: left;
-
     color: #3F3356;
 }
 
@@ -114,24 +106,14 @@
     font-weight: normal;
     font-size: 3.8vmin;
     line-height: 5vmin;
-
     color: #3F3356;
 }
 
 #doc_input {
-    position: absolute;
-    width:75%;
-    left: 12.5%;
-    top:71%;
-
-    background-color: #ffffff;
-
-    border: 1px solid #DADADA;
     box-sizing: border-box;
     border-radius: 4px;
     font-size: 3.5vmin;
     --padding-start: 5%;
-
 }
 
 #submit_button {
@@ -139,10 +121,26 @@
     width:50%;
     left: 25%;
     bottom: 10%;
-
 }
 
-ion-row {
+
+#circles {
+    position: sticky;
+    scale:1.3;
+    width: 100%;
+    left:-10%;
+}
+
+ion-text{
+    font-weight: 500;
+
+}
+ion-label{
+    font-weight: 500;
+}
+
+ion-item {
     width: 100%;
 }
+
 
