updated spacing for buttons

--- a/src/app/legal/legal.page.html
+++ b/src/app/legal/legal.page.html
@@ -5,27 +5,35 @@
     </ion-text>
   </ion-row>
   <ion-row>
-    <ion-button [routerLink]="['/appointments']" id="appointment_button">
-      <ion-icon name="calendar-number-outline"></ion-icon>
-      View Appointment
+    <ion-button  [routerLink]="['/appointments']" id="appointment_button">
+      <ion-icon style="width: 15%"  name="calendar-number-outline"></ion-icon>
+      <ion-text style="width: 85%">
+          View Appointment
+      </ion-text>
     </ion-button>
   </ion-row>
   <ion-row>
     <ion-button [routerLink]="['/schedule']" id="schedule_button">
-      <ion-icon name="calendar-outline"></ion-icon>
-      Schedule with Attorneys
+      <ion-icon style="width: 15%" name="calendar-outline"></ion-icon>
+      <ion-text style="width: 85%">
+        Schedule with Attorneys
+      </ion-text>
     </ion-button>
   </ion-row>
   <ion-row>
     <ion-button [routerLink]="['/faq']" id="faq_button">
-      <ion-icon name="help-circle-outline"></ion-icon>
-      FAQ
+      <ion-icon style="width: 15%" name="help-circle-outline"></ion-icon>
+      <ion-text style="width: 85%">
+        FAQ
+      </ion-text>
     </ion-button>
   </ion-row>
   <ion-row>
     <ion-button [routerLink]="['/resources']" id="resource_button">
-      <ion-icon name="book-outline"></ion-icon>
-      Resource Library
+      <ion-icon style="width: 15%"  name="book-outline"></ion-icon>
+      <ion-text style="width: 85%">
+        Resource Library
+      </ion-text>
     </ion-button>
   </ion-row>
 </ion-content>
