Started Calendly Integration

--- a/src/app/schedule/schedule.page.html
+++ b/src/app/schedule/schedule.page.html
@@ -20,3 +20,9 @@
         Find a CFGI Attorney For a Consulation
       </ion-text>
     </ion-row>
+
+    <ion-row>
+      <ion-button href="https://sethfinberg.s3-us-west-1.amazonaws.com/sethfinberg.html">
+        Schedule Seth
+      </ion-button>
+    </ion-row>
