--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import "~swiper/scss";
-@import "~swiper/scss/pagination";
+@import "~swiper/scss/autoplay";
 
 .flex-container {
     display: flex;
